# Homegear-Loxone

./: .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  ExampleRawPacketFlow.json  README.md  cmake_install.cmake  configure.ac  copyDeviceXml.sh  homegear_loxone_miniserver.cbp  makeCoverity.sh  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  rules
misc/Config Directory/: loxone.conf
misc/Device Description Files/: 000X-BasePeer.xml  000X-Weather.xml  010X-ColorPicker.xml  010X-ColorPickerV2.xml  010X-Dimmer.xml  010X-Gate.xml  010X-InfoOnlyAnalog.xml  010X-InfoOnlyDigital.xml  010X-Jalousie.xml  010X-Lightcontroller.xml  010X-LightcontrollerV2.xml  010X-Slider.xml  010X-Switch.xml  020X-Alarm.xml  020X-AlarmClock.xml  020X-Daytimer.xml  020X-Heatmixer.xml  020X-Hourcounter.xml  020X-MediaClient.xml  030X-ClimateController.xml  030X-IntelligentRoomController.xml  030X-IntelligentRoomControllerV2.xml  040X-AalEmergency.xml  040X-AalSmartAlarm.xml  040X-CarCharger.xml  040X-EnergyMonitor.xml  040X-FanController.xml  040X-Irrigaton.xml  050X-Central.xml  050X-CentralAlarm.xml  050X-CentralAudio.xml  050X-CentralGate.xml  050X-CentralJalousie.xml  050X-CentralLight.xml  050X-Intercom.xml  050X-IntercomV2.xml  050X-NFCCodeTouch.xml
misc/Device Description Files/l10n/en-US/: 020X-Alarm.xml  020X-AlarmClock.xml  040X-AalEmergency.xml  040X-AalSmartAlarm.xml
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  Loxone.cpp  Loxone.h  LoxoneCentral.cpp  LoxoneCentral.h  LoxoneControl.cpp  LoxoneControl.h  LoxoneEncryption.cpp  LoxoneEncryption.h  LoxoneLoxApp3.cpp  LoxoneLoxApp3.h  LoxonePacket.cpp  LoxonePacket.h  LoxonePeer.cpp  LoxonePeer.h  Makefile.am
src/PhysicalInterfaces/: GnutlsData.cpp  GnutlsData.h  LoxoneEncryption.cpp  LoxoneEncryption.h  Miniserver.cpp  Miniserver.h  Musicserver.cpp  Musicserver.h
src/controls/: AalEmergency.cpp  AalEmergency.h  AalSmartAlarm.cpp  AalSmartAlarm.h  Alarm.cpp  Alarm.h  Central.cpp  Central.h  ColorPicker.cpp  ColorPicker.h  ColorPickerV2.cpp  ColorPickerV2.h  Daytimer.cpp  Daytimer.h  Dimmer.cpp  Dimmer.h  IntelligentRoomControllerV2.cpp  IntelligentRoomControllerV2.h  Jalousie.cpp  Jalousie.h  LightControllerV2.cpp  LightControllerV2.h  MediaClient.cpp  MediaClient.h  NFCCodeTouch.cpp  NFCCodeTouch.h  Pushbutton.cpp  Pushbutton.h  Slider.cpp  Slider.h  Weather.cpp  Weather.h  createInstance.cpp  createInstance.h
src/helper/: KelvinRgb.cpp  KelvinRgb.h
